[package]
name = "pulsars"
version = "0.2.3"
description = "Tauri-based spreadsheet"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/roniemartinez/pulsars"
edition = "2021"

[profile.release]
# https://tauri.app/v1/guides/building/app-size/#rust-build-time-optimizations
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.8.0", features = ["dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
umya-spreadsheet = "2.0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
